--- a/sass/_blocks.scss
+++ b/sass/_blocks.scss
@@ -866,13 +866,13 @@
 .page-template-page_full-width .wp-block-group.alignfull.home-landing-top{
 	padding: 0;
 	position: relative;
-	margin-top: -115px;
+	margin-top: -120px;
 
 	@include media-breakpoint-up(md) {	
-		margin-top: -140px;
+		margin-top: -145px;
 	}
 	@include media-breakpoint-up(xxl) {	
-		margin-top: -161px;
+		margin-top: -165px;
 	}
 
 	@include media-breakpoint-down(md) {
